--- a/views/allArticles.ejs
+++ b/views/allArticles.ejs
@@ -8,8 +8,11 @@
 </head>
 
 <body>
-    <h4>Hello World</h4>
-    <p>API Route Testing</p>
+    <h3>Articles</h3>
+    <%for(let key of Object.keys(allArticles)){%>
+        <h4><%=allArticles[key].title%></h4>
+        <p><%=allArticles[key].content%></p>
+    <%}%>
 </body>
 
 <footer></footer>
